syntax = "proto3";

package process_manager;
option go_package = "github.com/olexnzarov/gofu/pb";

import "pb/process.proto";
import "pb/common.proto";

message StartRequest {
  process.ProcessConfiguration configuration = 1;
}

message StartReply {
  oneof response {
    common.Error error = 1;
    process.ProcessInformation process = 2;
  }
}

message ListRequest {}

message ListReply {
  repeated process.ProcessInformation processes = 1;
}

message RestartRequest {
  string process = 1;
}

message RestartReply {
  optional common.Error error = 1;
}

message StopRequest {
  string process = 1;
}

message StopReply {
  optional common.Error error = 1;
}

service ProcessManager {
  rpc Start(StartRequest) returns (StartReply) {}
  rpc List(ListRequest) returns (ListReply) {}
  rpc Restart(RestartRequest) returns (RestartReply) {}
  rpc Stop(StopRequest) returns (StopReply) {}
}